--- a/app/src/main/res/layout/fragment_mayor_menos.xml
+++ b/app/src/main/res/layout/fragment_mayor_menos.xml
@@ -16,7 +16,6 @@
         android:orientation="vertical">
 
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -286,7 +285,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/white"
-                        android:text="41"
+                        android:text="40"
                         android:background="@drawable/circle"
 
                         android:textSize="25dp"/>
@@ -466,7 +465,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center">
-                    <TextView
+                    <EditText
+                        android:id="@+id/primero_"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
@@ -480,22 +480,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center">
-                    <TextView
-                        android:layout_width="50dp"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:padding="10dp"
-                        android:background="@drawable/circle_transparente"
-                        android:textSize="25dp"/>
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center">
-                    <TextView
+                    <EditText
+                        android:id="@+id/segundo_"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
@@ -510,7 +496,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center">
-                    <TextView
+                    <EditText
+                        android:id="@+id/tercero_"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
@@ -525,7 +512,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center">
-                    <TextView
+                    <EditText
+                        android:id="@+id/cuarto_"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
@@ -540,7 +528,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center">
-                    <TextView
+                    <EditText
+                        android:id="@+id/quinto_"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/black"
+                        android:padding="10dp"
+                        android:background="@drawable/circle_transparente"
+                        android:textSize="25dp"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
+                    <EditText
+                        android:id="@+id/sexto_"
                         android:layout_width="50dp"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black"
