--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -189,4 +189,16 @@
         android:label="@string/app_name"
         tools:layout="@layout/fragment_resultado" />
 
+    <fragment
+        android:id="@+id/nav_resultado1"
+        android:name="com.daniel.appmatematicas.view.resultado.Resultado1Fragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_resultado" />
+
+    <fragment
+        android:id="@+id/nav_resultado3"
+        android:name="com.daniel.appmatematicas.view.resultado.Resultado3Fragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_resultado" />
+
 </navigation>
