--- a/app/src/main/res/layout/fragment_calculadora_i_i.xml
+++ b/app/src/main/res/layout/fragment_calculadora_i_i.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
-                android:text="Aprendiendo números"
+                android:text="Completa la expresión númerica"
                 android:textSize="17dp"
                 android:layout_gravity="center"
                 android:textColor="#849095"
@@ -76,7 +76,7 @@
 
                 <EditText
                     android:layout_weight="1"
-                    android:text="50"
+                    android:text=""
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
@@ -87,7 +87,7 @@
                     android:text="-"/>
                 <EditText
                     android:layout_weight="1"
-                    android:text="30"
+                    android:text=""
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
@@ -99,7 +99,7 @@
                     android:text="+"/>
                 <EditText
                     android:layout_weight="1"
-                    android:text="10"
+                    android:text=""
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
