--- a/app/src/main/res/layout/fragment_calcular_i.xml
+++ b/app/src/main/res/layout/fragment_calcular_i.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
-                android:text="Aprendiendo números"
+                android:text="Completa la expresión númerica"
                 android:textSize="17dp"
                 android:layout_gravity="center"
                 android:textColor="#849095"
@@ -77,7 +77,7 @@
 
                 <EditText
                     android:layout_weight="1"
-                    android:text="100"
+                    android:text=""
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
@@ -88,7 +88,7 @@
                     android:text="-"/>
                 <EditText
                     android:layout_weight="1"
-                    android:text="20"
+                    android:text=""
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
@@ -100,7 +100,7 @@
                     android:text="-"/>
                 <EditText
                     android:layout_weight="1"
-                    android:text="30"
+                    android:text=""
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
