--- a/app/src/main/res/layout/fragment_comparaciones.xml
+++ b/app/src/main/res/layout/fragment_comparaciones.xml
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:justificationMode="inter_word"
-                android:text="Aprendiendo números"
+                android:text="Completa la expresión númerica"
                 android:textSize="17dp"
                 android:layout_gravity="center"
                 android:textColor="#849095"
