--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,10 +24,16 @@
         tools:layout="@layout/suma" />
 
     <fragment
+        android:id="@+id/nav_suma_conllevadas"
+        android:name="com.daniel.appmatematicas.view.fragmentos.SumarConLlevadasFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_sumar_con_llevadas" />
+
+    <fragment
         android:id="@+id/nav_resta"
         android:name="com.daniel.appmatematicas.view.fragmentos.RestarFragment"
         android:label="@string/app_name"
-        tools:layout="Restar" />
+        tools:layout="@layout/resta" />
 
     <fragment
         android:id="@+id/nav_contar_color"
