--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,6 +35,13 @@
         android:label="@string/app_name"
         tools:layout="@layout/resta" />
 
+
+    <fragment
+        android:id="@+id/nav_resta_sin_llevadas"
+        android:name="com.daniel.appmatematicas.view.fragmentos.RestaSinLlevadasFragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_resta_sin_llevadas" />
+
     <fragment
         android:id="@+id/nav_contar_color"
         android:name="com.daniel.appmatematicas.view.fragmentos.ColorFragment"
