--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -207,7 +207,11 @@
         android:name="com.daniel.appmatematicas.view.resultado.Resultado1Fragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_resultado" />
-
+    <fragment
+        android:id="@+id/nav_resultado2"
+        android:name="com.daniel.appmatematicas.view.resultado.Resultado2Fragment"
+        android:label="@string/app_name"
+        tools:layout="@layout/fragment_resultado" />
 
     <fragment
         android:id="@+id/nav_resultadoV"
